# project_realtor

./: CMakeLists.txt  detector.cpp  detector.hpp  embedding.cpp  main.cpp  room.cpp  room.hpp  test_rooms.cpp
